--- a/zabbix_docker-compose.yml
+++ b/zabbix_docker-compose.yml
@@ -30,7 +30,7 @@ services:
     ports:
       - 10051:10051
     environment:
-      DB_SERVER_HOST: "zabbix_bd_1"
+      DB_SERVER_HOST: "zabbix-bd"
       POSTGRES_USER: "zabbix"
       POSTGRES_DB: "zabbix"
       POSTGRES_PASSWORD: "zabbix1234"
@@ -49,12 +49,12 @@ services:
       - 80:80
       - 443:443
     environment:
-      DB_SERVER_HOST: "zabbix_bd_1"
+      DB_SERVER_HOST: "zabbix-bd"
       POSTGRES_USER: "zabbix"
       POSTGRES_DB: "zabbix"
       POSTGRES_PASSWORD: "zabbix1234"
       PHP_TZ: "America/Maceio"
-      ZBX_SERVER_HOST: "zabbix_server_1"
+      ZBX_SERVER_HOST: "zabbix-server"
       ZBX_SERVER_NAME: "Zabbix-Server"
   agent:
     image: zabbix/zabbix-agent:alpine-3.4-latest
@@ -65,7 +65,7 @@ services:
       - lan
     restart: always
     environment:
-      ZBX_SERVER_HOST: "zabbix_server_1"
+      ZBX_SERVER_HOST: "zabbix-server"
       ZBX_HOSTNAME: "zabbix-agent"
   #proxy:
   #  image: zabbix/zabbix-proxy-sqlite3:alpine-3.4-latest
